[tool.poetry]
name = "slhtools"
version = "0.0.0"
description = ""
authors = ["Anubhab Haldar <a.haldar@samsung.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
ase = "^3.22.1"
matscipy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
