[project]
name = "gears_h_tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Anubhab Haldar", email = "a.haldar@samsung.com"},
    {name = "Ali K. Hamze", email = "ali.hamze@samsung.com"},
]
maintainers = [
    {name = "Anubhab Haldar", email = "a.haldar@samsung.com"},
    {name = "Ali K. Hamze", email = "ali.hamze@samsung.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.25.0",
    "gpaw>=25.7.0",
    "matscipy>=1.1.0",
    "numpy>=2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gears_h_tools"]